--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,12 @@
     <string name="confirm_new_password">Confirm New Password</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="get_better_connected_to_healthcare">Get better connected to healthcare</string>
+    <string name="get_started">Get started</string>
+    <string name="sign_up_prompt">Don\'t have an account? Sign up</string>
+    <string name="sign_up">Sign up</string>
+    <string name="back_to_welcome">Back to Welcome Screen</string>
+    <string name="sign_in_prompt">Already have an account? Sign in</string>
+    <string name="sign_in_short">Sign in</string>
+
 </resources>
