--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,7 @@
     <string name="back_to_welcome">Back to Welcome Screen</string>
     <string name="sign_in_prompt">Already have an account? Sign in</string>
     <string name="sign_in_short">Sign in</string>
+    <string name="choose_an_image"><u>Choose an image</u></string>
+    <string name="save"><u>Save</u></string>
 
 </resources>
